--- a/samples/samples.css
+++ b/samples/samples.css
@@ -9,21 +9,27 @@
 }
 
 .columnized {
+   text-align: justify;
 }
 
-.col {
+.columnized .col>:first-child {
+   /* first child of every column */
+   margin-top: 0px;
+}
+
+.columnized .lastCol {
+   border-right: none;
+}
+
+.columnized .col {
    float: left;
    padding: .5em;
    border-right: 1px dashed gray;
    margin-right: 4px;
 }
 
-.columnized .col:last-child {
-   border-right: none;
-}
-
 .columns-2 .col {
-   width: 45%;
+   width: 47%;
 }
 
 .columns-3 .col {
@@ -32,4 +38,17 @@
 
 .columns-4 .col {
    width: 22%;
+}
+
+.columns-5 .col {
+   width: 17%;
+}
+
+.box {
+   border: 1px solid grey;
+   padding: 0.5em;
+}
+
+.box p {
+   margin-top: 0px;
 }
